--- a/shepherd/pubspec.yaml
+++ b/shepherd/pubspec.yaml
@@ -29,12 +29,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   
-  provider: ^4.3.3
   location: ^3.0.0
   sqflite:
   path:
   http: 
   connectivity:
+  shared_preferences:
 
   awesome_dialog: 
 
