adds files to ios/ and android/ to allow insecure http

--- a/shepherd/ios/Runner/Info.plist
+++ b/shepherd/ios/Runner/Info.plist
@@ -8,6 +8,24 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>NSLocationWhenInUseUsage</string>
 
+	<!--These allow flutter to make insecure HTTP requests to EVV-->
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>ec2-52-23-212-121.compute-1.amazonaws.com:8080/evv/clock-in</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+			</dict>
+			<key>ec2-52-23-212-121.compute-1.amazonaws.com:8080/evv/clock-out</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
+
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
