--- a/shepherd/ios/Runner/Info.plist
+++ b/shepherd/ios/Runner/Info.plist
@@ -23,6 +23,11 @@
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
 			</dict>
+			<key>54.158.192.252</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+			</dict>
 		</dict>
 	</dict>
 
